fix: add flex wrap into tags

--- a/sass/components/_tags.scss
+++ b/sass/components/_tags.scss
@@ -1,5 +1,6 @@
 .tags {
   display: inline-flex;
+  flex-wrap: wrap;
   gap: 10px;
   margin-top: 20px;
   text-align: center;
