--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -236,6 +236,7 @@ body {
 }
 .tags {
   display: inline-flex;
+  flex-wrap: wrap;
   gap: 10px;
   margin-top: 20px;
   text-align: center;
